fix(intro): Hacky temporary fix to remove random line appearing on mobile

--- a/app/assets/stylesheets/intro.scss
+++ b/app/assets/stylesheets/intro.scss
@@ -85,4 +85,16 @@
   .intro .social-icons > li > a {
     font-size: 3.5rem;
   }
+
+  .intro-section {
+    background-image: none;
+  }
+
+  .intro-section:before {
+    background: none;
+  }
+
+  .profile-img {
+    display: none;
+  }
 }
